--- a/root/index.html
+++ b/root/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Alexander Konopelski - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Your Professional Title (e.g., Software Engineer, Data Scientist, Web Developer)</p>
+            <h1>Alexander Konopelski</h1>
+            <p>Software Engineer</p>
         </div>
     </header>
 
     <section id="about" class="container">
         <h2>About Me</h2>
-        <p>Write a brief and engaging summary about yourself, your skills, your career goals, and what you bring to a team. Highlight your passion for your field. (Around 2-4 sentences)</p>
+        <p>Summary</p>
     </section>
 
     <section id="projects" class="container">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project Name 1</h3>
+            <h3>Coffee Shop App</h3>
             <p>Short description of the project, your role, and the technologies used.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
         <div class="project">
-            <h3>Project Name 2</h3>
+            <h3>Diamond Game</h3>
             <p>Short description of the project, your role, and the technologies used.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
