--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Alexander Konopelski - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Your Professional Title (e.g., Software Engineer, Data Scientist, Web Developer)</p>
+            <h1>Alexander Konopelski</h1>
+            <p>Software Engineer and Web Developer)</p>
         </div>
     </header>
 
@@ -22,13 +22,13 @@
     <section id="projects" class="container">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project Name 1</h3>
-            <p>Short description of the project, your role, and the technologies used.</p>
+            <h3>Coffee Shop Application</h3>
+            <p>Simple app that simulates a coffee shop. Includes SQL features such as retreiveing, editing, and deleting data from a database. The application also includes visual statistics.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
         <div class="project">
-            <h3>Project Name 2</h3>
-            <p>Short description of the project, your role, and the technologies used.</p>
+            <h3>Diamond Game</h3>
+            <p>A 2D idle Java game that involves game loops.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
         </section>
@@ -36,16 +36,16 @@
     <section id="skills" class="container">
         <h2>Skills</h2>
         <ul>
-            <li>Skill 1 (e.g., Python, JavaScript, HTML, CSS)</li>
-            <li>Skill 2 (e.g., Java, C++, SQL)</li>
-            <li>Skill 3 (e.g., React, Angular, Node.js)</li>
-            <li>Skill 4 (e.g., Git, AWS, Docker)</li>
+            <li>Skill 1 Java - Advanced Level</li>
+            <li>Skill 2 Python - Secondary Language</li>
+            <li>Skill 3 3D modeling - Fusion 360</li>
+            <li>Skill 4 Database Management - SQL</li>
             </ul>
     </section>
 
     <section id="contact" class="container">
         <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
+        <p>Email: 22konopelskialexande@gmail.com</p>
         <p>LinkedIn: <a href="your-linkedin-url" target="_blank">Your LinkedIn Profile</a></p>
         <p>GitHub: <a href="your-github-url" target="_blank">Your GitHub Profile</a></p>
     </section>
