--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <nav>
+        <div class="container">
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="animated-line"></div>
+        </div>
+    </nav>
+
+    <header id="home">
         <div class="container">
             <h1>Alexander Konopelski</h1>
-            <p>Software Engineer and Web Developer)</p>
+            <p>Software Engineer and Web Developer</p>
         </div>
     </header>
 
@@ -22,36 +35,38 @@
     <section id="projects" class="container">
         <h2>Projects</h2>
         <div class="project">
+            <img src="project1-preview.jpg" alt="Project 1 Preview" class="project-image">
             <h3>Coffee Shop Application</h3>
             <p>Simple app that simulates a coffee shop. Includes SQL features such as retreiveing, editing, and deleting data from a database. The application also includes visual statistics.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
         <div class="project">
+            <img src="project2-preview.jpg" alt="Project 2 Preview" class="project-image">
             <h3>Diamond Game</h3>
             <p>A 2D idle Java game that involves game loops.</p>
             <a href="#" target="_blank">View Project</a>
         </div>
-        </section>
+    </section>
 
     <section id="skills" class="container">
         <h2>Skills</h2>
         <ul>
-            <li>Skill 1 Java - Advanced Level</li>
-            <li>Skill 2 Python - Secondary Language</li>
-            <li>Skill 3 3D modeling - Fusion 360</li>
-            <li>Skill 4 Database Management - SQL</li>
-            </ul>
+            <li>Java - Advanced Level</li>
+            <li>Python - Secondary Language</li>
+            <li>3D modeling - Fusion 360</li>
+            <li>Database Management - SQL</li>
+        </ul>
     </section>
 
     <section id="contact" class="container">
         <h2>Contact</h2>
         <p>Email: 22konopelskialexande@gmail.com</p>
         <p>LinkedIn: <a href="your-linkedin-url" target="_blank">Your LinkedIn Profile</a></p>
-        <p>GitHub: <a href="your-github-url" target="_blank">Your GitHub Profile</a></p>
+        <p>GitHub: <a href="https://github.com/Altania5" target="_blank">Your GitHub Profile</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2025 Alexander Konopelski</p>
     </footer>
 </body>
 </html>
