--- a/index.html
+++ b/index.html
@@ -35,16 +35,24 @@
     <section id="projects" class="container">
         <h2>Projects</h2>
         <div class="project">
-            <img src="project1-preview.jpg" alt="Project 1 Preview" class="project-image">
-            <h3>Coffee Shop Application</h3>
-            <p>Simple app that simulates a coffee shop. Includes SQL features such as retreiveing, editing, and deleting data from a database. The application also includes visual statistics.</p>
-            <a href="#" target="_blank">View Project</a>
+            <div class="project-content">
+                <img src="images/JavaCoffee.png" alt="Java Coffee Shop Preview" class="project-image">
+                <div class="project-text">
+                    <h3>Coffee Shop Application</h3>
+                    <p>Simple app that simulates a coffee shop. Includes SQL features such as retreiveing, editing, and deleting data from a database. The application also includes visual statistics.</p>
+                    <a href="#" target="_blank">View Project</a>
+                </div>
+            </div>
         </div>
         <div class="project">
-            <img src="project2-preview.jpg" alt="Project 2 Preview" class="project-image">
-            <h3>Diamond Game</h3>
-            <p>A 2D idle Java game that involves game loops.</p>
-            <a href="#" target="_blank">View Project</a>
+            <div class="project-content">
+                <img src="project2-preview.jpg" alt="Project 2 Preview" class="project-image">
+                <div class="project-text">
+                    <h3>Diamond Game</h3>
+                    <p>A 2D idle Java game that involves game loops.</p>
+                    <a href="#" target="_blank">View Project</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -62,7 +70,7 @@
         <h2>Contact</h2>
         <p>Email: 22konopelskialexande@gmail.com</p>
         <p>LinkedIn: <a href="your-linkedin-url" target="_blank">Your LinkedIn Profile</a></p>
-        <p>GitHub: <a href="https://github.com/Altania5" target="_blank">Your GitHub Profile</a></p>
+        <p>GitHub: <a href="https://github.com/Altania5" target="_blank">GitHub Profile</a></p>
     </section>
 
     <footer>
