about me addons

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
         </div>
         <div class="project-card">
             <div class="project-image">
-                <img src="image/diamondgame.png" alt="Video Ganerator Preview">
+                <img src="images/videoMaker.png" alt="Video Ganerator Preview">
             </div>
             <div class="project-info">
                 <h3>Video Maker</h3>
@@ -91,7 +91,7 @@
             </div>
         </div>
     </section>
-
+    <div style="clear: both;"></div> 
     <footer>
         <p>&copy; 2025 Alexander Konopelski</p>
     </footer>
