--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Alexander Konopelski</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</head>
 <body>
     <nav>
         <div class="container">
@@ -12,32 +14,83 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
-                <li><a href="index.html#skills">Skills</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="index.html#skills" class="smooth-scroll">Skills</a></li>
+                <li><a href="index.html#contact" class="smooth-scroll">Contact</a></li>
             </ul>
             <div class="animated-line"></div>
         </div>
     </nav>
 
-    <header>
-        <div class="container">
-            <h1>About Me</h1>
+    <section class="container about-me">
+        <div class="about-content">
+            <img src="your-profile-picture.jpg" alt="Your Profile Picture" class="profile-picture">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>A brief introductory paragraph about yourself (2-4 sentences max). Highlight something unique or memorable.</p>
+                <p id="more-about" style="display: none;">More detailed information about you. Talk about your passions, experiences, and what drives you.</p>
+                <button id="read-more-btn">Read More</button>
+            </div>
         </div>
-    </header>
 
-    <section class="container">
-        <p>Here you can write a more detailed "about me" section. Expand on your skills, experiences, education, and interests. You can also include a photo of yourself if you'd like.</p>
+        <div class="experience-section">
+            <h2>Background</h2>
+            <div class="experience">
+                <h3>Dorney Park Area Supervisor</h3>
+                <p>June 2020 - Present</p>
+                <ul>
+                    <li>Managing one of four ride areas at Dorney Park</li>
+                    <li>Scheduling assosciate and managing timecards</li>
+                    <li>Training assosciates how to operate any rides in the park</li>
+                </ul>
+            </div>
+            <div class="experience">
+                <h3>Experience 2 Title</h3>
+                <p>Dates of Employment</p>
+                <ul>
+                    <li>Responsibility 1</li>
+                    <li>Responsibility 2</li>
+                </ul>
+            </div>
+        </div>
 
-        <p>Consider adding subsections like:</p>
-        <ul>
-            <li>My Background</li>
-            <li>My Philosophy</li>
-            <li>My Hobbies</li>
-        </ul>
+        <div class="education-section">
+            <h2>Education</h2>
+            <div class="education-entry">
+                <h3>West Chester University Of Pennsylvania</h3>
+                <p>Dates Attended: August 2022 - Present</p>
+                <p>Bachlor of Science in Computer Science</p>
+                <p>Attending Masters Program in Computer Science</p>
+            </div>
+        </div>
+
+        <div class="skills-section">
+            <h2>Skills</h2>
+            <ul class="skills-list">
+                <li>
+                    <span class="skill-name">Java Programming</span>
+                    <div class="skill-bar"><div class="skill-level" data-level="90"></div></div>
+                </li>
+                <li>
+                    <span class="skill-name">Python Programming</span>
+                    <div class="skill-bar"><div class="skill-level" data-level="75"></div></div>
+                </li>
+                <li>
+                    <span class="skill-name">SQL Database Management</span>
+                    <div class="skill-bar"><div class="skill-level" data-level="100"></div></div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="hobbies-section">
+            <h2>Hobbies</h2>
+            <p>Talk about your interests and passions!</p>
+        </div>
     </section>
 
     <footer>
         <p>&copy; 2025 Alexander Konopelski</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
