--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexander Konopelski - Portfolio</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,6 +28,7 @@
         </div>
     </header>
     <p>Visitors: <span id="user-counter">Loading...</span></p>
+    <script src="script.js"></script>
     <section id="about" class="container">
         <h2>About Me</h2>
         <p>Write a brief and engaging summary about yourself, your skills, your career goals, and what you bring to a team. Highlight your passion for your field. (Around 2-4 sentences)</p>
@@ -76,6 +78,4 @@
     <footer>
         <p>&copy; 2025 Alexander Konopelski</p>
     </footer>
-</body>
-<script src="script.js"></script> </body>
 </html>
